--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@hookform/resolvers": "^3.1.1",
     "@prisma/client": "^5.1.0",
     "@radix-ui/react-alert-dialog": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.6",
     "@radix-ui/react-separator": "^1.0.3",
@@ -30,10 +31,12 @@
     "autoprefixer": "10.4.14",
     "class-variance-authority": "^0.6.1",
     "clsx": "^2.0.0",
+    "cmdk": "^0.2.0",
     "dayjs": "^1.11.9",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
     "immer": "^10.0.2",
+    "keyboardjs": "^2.7.0",
     "lucide-react": "^0.260.0",
     "next": "13.4.10",
     "postcss": "8.4.26",
